adding events pusher on a separate thread

--- a/HardwareLayer/makefile
+++ b/HardwareLayer/makefile
@@ -1,16 +1,16 @@
 BIN=hl
-SRC=main.cpp I2Cdev.cpp TableEventsQueue.cpp
+SRC=main.cpp I2Cdev.cpp TableEventsQueue.cpp EventsPusher.cpp
 OBJDIR=obj
 OBJ=$(patsubst %,$(OBJDIR)/%,$(SRC:.cpp=.o))
 CC=g++
-CFLAGS=-lwiringPi -lpthread
-LFLAGS=
+CFLAGS=-pedantic -Wall
+LFLAGS=-lwiringPi -lpthread
 
 
 all: $(OBJDIR) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(CFLAGS) $(LFLAGS) -o $(BIN) $(OBJ)
+	$(CC) $(CFLAGS) -o $(BIN) $(OBJ) $(LFLAGS)
 
 $(OBJDIR)/%.o: %.cpp
 	$(CC) $(CFLAGS) -c -o $@ $<
