--- a/api/composer.json
+++ b/api/composer.json
@@ -1,8 +1,9 @@
 {
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.4",
         "silex/silex": "~1.0",
-        "symfony/yaml": "2.5.*@dev"
+        "symfony/yaml": "2.5.*@dev",
+        "symfony/twig-bridge": "2.3.*@dev"
     },
     "autoload": {
         "psr-0": { "": "src/" }
