--- a/api/composer.json
+++ b/api/composer.json
@@ -3,7 +3,8 @@
         "php": ">=5.4",
         "silex/silex": "~1.0",
         "symfony/yaml": "2.5.*@dev",
-        "symfony/twig-bridge": "2.3.*@dev"
+        "symfony/twig-bridge": "2.3.*@dev",
+        "doctrine/dbal": ">=2.2.0,<2.4.0-dev"
     },
     "autoload": {
         "psr-0": { "": "src/" }
