--- a/api/src/_users.yml
+++ b/api/src/_users.yml
@@ -1,2 +1,2 @@
 0: {"img": "guest.png", "name": "Svečias"}
-1: {"img": "guest.png", "name": "Neatpažintas"}
+1: {"img": "alien.png", "name": "Neatpažintas"}
